frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.scss
$role-background-color: #e6fce9;
$role-text-color: #0a7319;

.profile-wrapper {
  padding: 24px 34px 34px !important;
  border-radius: 10px;
  padding-top: 10px;

  .personal-information {
    display: flex;
    height: 100px;

    &.normal-user {
      margin-bottom: 0;
    }

    .profile-pic {
      margin-right: 20px;
      border: 1px solid var(--blue);
      border-radius: 50%;
      width: 46px;
      height: 46px;
    }

    .user-info {
      display: flex;
      flex-direction: column;
      flex-grow: 1;

      .email {
        color: var(--grey-5);
      }

      .role {
        margin-top: 10px;
        border-radius: 4px;
        background-color: $role-background-color;
        padding: 2px;
        width: 100px;
        text-align: center;
        color: $role-text-color;
      }
    }

    .toggle-container {
      display: flex;
      flex-direction: column;
      align-items: flex-end;

      .toggle {
        margin-bottom: 10px;
      }
    }
  }

  .role-wrapper {
    padding: 24px 0;

    .header {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: space-between;
      margin-bottom: 10px;

      &-title {
        font-size: var(--text-size-xx-large);
      }

      button {
        background-color: var(--blue);
        height: 40px;
        color: var(--white);
      }
    }

    .filter-options {
      margin-right: 20px;
      width: 120px;
    }

    .search-icon {
      margin-top: -6px;
      height: 16px;
    }

    .users-list-container {
      margin-top: 20px;
      overflow: auto;

      .users-list {
        width: 100%;

        th,
        td {
          padding: 10px 5px;
        }

        th {
          color: var(--grey-2);
        }

        .mat-mdc-header-cell {
          background-color: var(--white);
        }

        tr.mat-mdc-footer-row,
        tr.mat-mdc-row {
          height: 55px;
        }

        .mat-mdc-cell {
          width: 17%;
          word-break: break-word;

          &.cdk-column-email {
            width: 25%;
          }

          &.cdk-column-role {
            width: 8%;
          }

          &.cdk-column-edit,
          &.cdk-column-deleteUser {
            width: 4%;
          }
        }

        .icon,
        .remove-icon {
          display: flex;
          justify-content: center;
          align-items: center;
          font-size: var(--text-size-x-large);
          color: gray;

          &:hover {
            cursor: pointer;
          }
        }
      }
    }
  }
}

